Learn to write html.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<html>
-<head>fammy.github.io</head>
-<body>
-	<h1>fammy.github.io</h1>
-	<ul>
-		<li><a href="./xamarin/">Intro to Xamarin Presentation</a>
-	</ul>
-</body>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>fammy.github.io</title>
+	</head>
+	<body>
+		<h1>fammy.github.io</h1>
+		<ul>
+			<li><a href="./xamarin/">Intro to Xamarin Presentation</a>
+			</ul>
+		</body>
 </html>
