Who knows, it doesn't work

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<h1>fammy.github.io</h1>
 		<ul>
-			<li><a href="./async/">Wrapping your brain around Async and Await in C#</a>
+			<li><a href="./async/slides/">Wrapping your brain around Async and Await in C#</a>
 			<li><a href="./xamarin/">Intro to Xamarin Presentation</a>
 		</ul>
 
