--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 	<body>
 		<h1>fammy.github.io</h1>
 		<ul>
-			<li><a href="./async/slides/">Wrapping your brain around Async and Await in C#</a>
-			<li><a href="./xamarin/">Intro to Xamarin Presentation</a>
+			<li>
+				Wrapping your brain around Async and Await in C#
+				[<a href="./async/slides/">slides</a>]
+				[<a href="https://github.com/Fammy/AsyncAwaitPresentation">source</a>]
+			</li>
+			<li>
+				Intro to Xamarin Presentation
+				[<a href="./xamarin/">slides</a>]
+				[<a href="https://github.com/Fammy/IntroToXamarinPresentation">source</a>]
+			</li>
 		</ul>
+		<div><img src="fammy.jpg"/></div>
 
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
