Add game submodule

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 		<h1>fammy.github.io</h1>
 		<ul>
 			<li>
+				Game programming in JavaScript with Crafty
+				[<a href="./game/slides/">slides</a>]
+				[<a href="https://github.com/Fammy/GameJSPresentation">source</a>]
+			</li>
+			<li>
 				Wrapping your brain around Async and Await in C#
 				[<a href="./async/slides/">slides</a>]
 				[<a href="https://github.com/Fammy/AsyncAwaitPresentation">source</a>]
