--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en" class="home">
+<html lang="en" class="contact">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Homepage of Jason Famularo">
+  <meta name="description" content="Jason Famularo, contact information">
   <meta name="author" content="Jason Famularo">
 
-  <title>famularo.org · Jason Famularo</title>
+  <title>famularo.org · Contact</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -23,18 +23,27 @@
     <header class="masthead mb-auto">
       <div class="inner">
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="index.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
           <a class="nav-link" href="speaking.html">Speaking</a>
           <a class="nav-link" href="projects.html">Projects</a>
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link active" href="contact.html">Contact</a>
           <a class="nav-link" href="http://jason.famularo.org">Blog</a>
         </nav>
       </div>
     </header>
 
     <main role="main" class="inner cover mb-auto">
-      <h1 class="cover-heading">Hi, I'm Jason.</h1>
-      <p class="lead">I'm a software developer, husband, and father.</p>
+      <h1 class="cover-heading">Contact Jason</h1>
+      <p class="lead">
+        Find me on a variety of social networks:
+        <ul style="list-style-type: none; padding: 0;">
+          <li><a href="https://twitter.com/splodn"><i data-feather="twitter"></i> Twitter</a></li>
+          <li><a href="https://github.com/Fammy"><i data-feather="github"></i> GitHub</a></li>
+        </ul>
+        <span class="small-text">
+          (I don't have a Facebook or LinkedIn profile, so you won't find me there)
+        </span>
+      </p>
     </main>
   </div>
 
@@ -44,13 +53,17 @@
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/feather-icons"></script>
   <script>
-    (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    feather.replace()
+  </script>
+  <script>
+      (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+          (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-22035260-1', 'auto');
     ga('send', 'pageview');
