Add CraftJS games

--- a/projects-games.html
+++ b/projects-games.html
@@ -59,7 +59,7 @@
                 video game.
                 You are loading assets onto a truck. Load the dark ones on the dark truck, and the light ones on the light truck.</p>
               <div>
-                <a href="Games/TrackAbout/" class="btn btn-lg btn-secondary">
+                <a href="games/trackabout/" class="btn btn-lg btn-secondary">
                   Play <i data-feather="play-circle"></i></a>
               </div>
             </div>
@@ -71,7 +71,7 @@
               <p>
                 Sample game to demonstrate the <a href="http://craftyjs.com/">Crafty</a> JS library.</p>
               <div>
-                <a href="Games/craftyplatformer/" class="btn btn-lg btn-secondary">
+                <a href="games/craftyplatformer/" class="btn btn-lg btn-secondary">
                   Play <i data-feather="play-circle"></i></a>
                 <a href="http://jason.famularo.org/a-simple-introduction-to-html5-game-development-with-crafty" class="btn btn-lg btn-secondary">
                   Read Blog Post <i data-feather="arrow-right-circle"></i></a>
