Cleanup contact and speaking

--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,8 @@
         <ul style="list-style-type: none; padding: 0;">
           <li><a href="https://twitter.com/splodn"><i data-feather="twitter"></i> Twitter</a></li>
           <li><a href="https://github.com/Fammy"><i data-feather="github"></i> GitHub</a></li>
+          <li><a href="https://polywork.com/Fam"><i data-feather="grid"></i> Polywork</a></li>
         </ul>
-        <span class="small-text">
-          (I don't have a Facebook or LinkedIn profile, so you won't find me there)
-        </span>
       </p>
     </main>
   </div>
