--- a/speaking.html
+++ b/speaking.html
@@ -36,7 +36,7 @@
       <h1 class="cover-heading">Speaking</h1>
       <p class="lead">
         I enjoy speaking to local user groups and enjoy sharing what I've learned with others.
-        Here are a few presentations I've given in the past (or plan to give soon).
+        Here are a few presentations I've given in the past.
       </p>
 
       <div class="container">
