--- a/WinCS/index.html
+++ b/WinCS/index.html
@@ -15,6 +15,14 @@
         var programs1Expanded = false;
         var programs1Clicked = false;
     </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=3577783859"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){window.dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', '3577783859');
+  </script>
 </head>
 
 <body onload="Go();" onclick="HandleBodyClick();">
@@ -115,17 +123,6 @@
         </div>
         <div id="browsertask" style="display: none;"></div>
     </div>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-22035260-1', 'auto');
-        ga('send', 'pageview');
-    </script>
 </body>
 
 </html>
