Trying to figure GA4

--- a/ColorDemo/index.html
+++ b/ColorDemo/index.html
@@ -98,13 +98,13 @@
 		}
 	</script>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=3577783859"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6V028LQ85D"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){window.dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '3577783859');
+  gtag('config', 'G-6V028LQ85D');
 </script>
 
 </head>
