--- a/WinCS/index.html
+++ b/WinCS/index.html
@@ -15,13 +15,13 @@
         var programs1Expanded = false;
         var programs1Clicked = false;
     </script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=3577783859"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6V028LQ85D"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){window.dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', '3577783859');
+    gtag('config', 'G-6V028LQ85D');
   </script>
 </head>
 
