--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
   <link rel="icon" sizes="192x192" href="images/icon-192.jpg">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=3577783859"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6V028LQ85D"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){window.dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', '3577783859');
+    gtag('config', 'G-6V028LQ85D');
   </script>
 </head>
 
