--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,7 @@
           <li><a href="https://twitter.com/splodn"><i data-feather="twitter"></i> Twitter</a></li>
           <li><a href="https://github.com/Fammy"><i data-feather="github"></i> GitHub</a></li>
           <li><a href="https://polywork.com/Fam"><i data-feather="grid"></i> Polywork</a></li>
+          <li><a href="https://www.linkedin.com/in/jason-famularo"><i data-feather="linkedin"></i> LinkedIn</a></li>
         </ul>
       </p>
     </main>
