update release notes for 2.2.1

--- a/BarcodeExtension/index.html
+++ b/BarcodeExtension/index.html
@@ -47,6 +47,7 @@
       <h3>Change log</h3>
       <p>
         <ul>
+          <li>v2.2.1 - Ensure 'Data' is empty.</li>
           <li>v2.2.0 - Dark mode, updated to Chrome manifest V3.</li>
           <li>v2.1.1 - Update barcode generation logic, allow space in Code-39 barcodes.</li>
           <li>v2.1.0 - Add button to download and save the barcode you generated.</li>
