Adde Death and Taxes: Survivor

--- a/projects-games.html
+++ b/projects-games.html
@@ -62,6 +62,20 @@
 
           <div class="col-md-4 p-2">
             <div class="card">
+              <h3>Death and Taxes: Survivor</h3>
+              <p><img src="images/death-and-taxes.gif" class="card-img-full" /></p>
+              <p>
+                My entry for the GitHub Game Off 2022, written on the <a href="https://www.lexaloffle.com/pico-8.php">Pico-8 fantasy console</a>.
+                The theme was "Cliché", and I went with "The only thing certain in life is death and taxes".</p>
+              <div>
+                <a href="https://fammy.itch.io/death-and-taxes-survivors" class="btn btn-lg btn-secondary">
+                  Play <i data-feather="play-circle"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 p-2">
+            <div class="card">
               <h3>TrackAbout: The Game</h3>
               <p><img src="images/trackabout.jpg" class="rounded float-left mr-2" />
                 Another <a href="http://craftyjs.com/">Crafty</a> JS game, but this time the software for my day-job reimagined as an abstract
