--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,8 @@
       <h1 class="cover-heading">Contact Jason</h1>
       <p class="lead">
         Find me on a variety of social networks:
-        <ul style="list-style-type: none; padding: 0;">
+        <ul class="stack">
+          <li><a href="https://mastodon.social/@jfam"><i data-feather="at-sign"></i> Mastodon</a></li>
           <li><a href="https://twitter.com/splodn"><i data-feather="twitter"></i> Twitter</a></li>
           <li><a href="https://github.com/Fammy"><i data-feather="github"></i> GitHub</a></li>
           <li><a href="https://polywork.com/Fam"><i data-feather="grid"></i> Polywork</a></li>
