add presentation, remove polywork, twitter

--- a/speaking.html
+++ b/speaking.html
@@ -50,6 +50,17 @@
 
       <div class="container">
         <div class="row justify-content-md-center">
+
+          <div class="col-md-4 p-2">
+            <div class="card">
+              <h3>Refactoring Your Code to Use the Latest C# Features</h3>
+              <p>Over the years, the C# language has undergone significant transformations. With new features continually being introduced, your code can benefit from improved readability and a boost in developer satisfaction. Discussion on these cutting-edge features and how to seamlessly integrate them into your codebase.</p>
+              <div>
+                <a href="https://github.com/Fammy/RefactorPresentation" class="btn btn-lg btn-secondary">Source code <i data-feather="github"></i></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-md-4 p-2">
             <div class="card">
               <h3>Wrapping your brain around Async and Await in C#</h3>
